--- a/Preventigo/CSS/company.css
+++ b/Preventigo/CSS/company.css
@@ -1,38 +1,59 @@
 #dataTable thead {
-  display: none;
+    display: none;
 }
+
 .dating {
-  margin: 30px 0;
+    margin: 30px 0;
 }
+
 .dating h2 {
-  margin: 20px 10px;
+    margin: 20px 10px;
 }
+
 body {
-  font-size: 10px;
+    font-size: 10px;
 }
+
 .search {
-  margin: 20px 0;
+    margin: 20px 0;
 }
+
 .search button {
-  margin: 0 10px;
+    margin: 0 10px;
 }
+
 .status {
-  margin: 10px 0;
+    margin: 10px 0;
 }
+
 h1 {
-  text-align: center;
-  border-bottom: 1px solid #444;
+    text-align: center;
+    border-bottom: 1px solid #444;
 }
-.foot {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
+
 .btns {
     margin-top: 20px;
 }
-@media only screen and (max-width: 1000px) {
-   .foot {
-    position: relative;
-}  
+
+.add {
+    margin: 20px;
+}
+
+.menu-items {
+    list-style-type: none;
+    font-size: 18px;
+    display: inline-flex;
+    margin-bottom: 0;
+    margin-top: 20px
+}
+
+.contain {
+    text-align: center;
+    
+}
+
+.rows {
+    background: #c9c6c6;
+    border: 1px solid #000;
+    margin: 20px 0;
 }
