--- a/Preventigo/CSS/preventigo.css
+++ b/Preventigo/CSS/preventigo.css
@@ -2,10 +2,6 @@
     box-sizing: border-box;
 }
 
-html {
-    overflow-x: hidden;
-}
-
 body {
     color: #000;
     font-family: Dosis, sans-serif;
@@ -28,6 +24,7 @@ header {
 
 header h4 {
     color: #fff;
+    padding: 0;
 }
 
 header h4 span {
@@ -127,7 +124,7 @@ burger,
 .navigation-header {
     background-color: #7d7b7a;
     height: 100px;
-    padding: 30px 10px;
+    padding: 0 10px 0 0px;
 }
 
 .navigation-header div span {
@@ -138,11 +135,12 @@ burger,
 }
 
 .logo img {
-    width: 180px;
-    position: absolute;
-    top: -50px;
+    width: 100px;
 }
 
+.logo {
+    float: left;
+}
 .main-logo img {
     width: 400px;
 }
@@ -150,6 +148,7 @@ burger,
 nav {
     float: right;
     padding: 10px 0;
+    margin: 25px 0;
 }
 
 nav ul li {
@@ -196,7 +195,7 @@ nav ul li a:hover {
 }
 
 .banner {
-    background: url(../images/banner.jpg);
+    background: url(../IMAGES/banner.jpg);
     background-position: center;
     background-size: cover;
     height: 85vh;
@@ -420,7 +419,6 @@ ul.social-network li {
 #carousel {
     background: #f6f6f6;
     border: 1px solid #ece6e6;
-    padding: 30px;
     text-align: center;
 }
 
@@ -547,7 +545,13 @@ a,
     width: 30px;
     background-size: contain;
     display: none;
-    z-index: 99999;
+    z-index: 1;
+}
+
+.pro-img {
+    width: 300px;
+    height: 200px;
+    margin: 0 auto;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -586,15 +590,19 @@ a,
         color: #fff;
         width: 100%;
         padding: 0;
-        top: 25px;
+        top:113px;
+        left: 0;
         text-align: center;
         position: absolute;
-        left: 10px;
         z-index: 999;
-            border: 1px solid #7d7b7a;
+        border: 1px solid #7d7b7a;
     }
     nav ul li a {
         color: #fff;
+        display: block;
+    }
+    nav ul li a:hover {
+        color: #337ab7;
     }
     nav ul li {
         display: block;
